# content-creator

./: .env  content.db  main.py  mvp2.py  pyproject.toml  requirements.txt
posts/: 2025-05-19_Porque_a_área_de_TI_é_desvalorizada_mesmo_sendo_importante.md  2025-05-20_Beneficios_de_treinar_diariamente_.md  2025-05-20_Conteúdo_para_marca_de_roupa_fitness_chamada_new_fit,_aborde_os_beneficio_de_treinar_diariamente_.md
prompts/: template_aida.txt  template_pas.txt
